create a reader to read excel file